# neuro_practice

./: .flake8  linters.sh  pyproject.toml
bci_classifier/: __init__.py  classifier.py  cli.py  data_loader.py  feature_extractor.py  pipeline.py  preprocessor.py  pyproject.toml
notebooks/: BCI_classification_pipeline.ipynb  EEG_Time_Frequency_Analysis.ipynb  ERP.ipynb  beamformer_is.ipynb  cluster_between_time_freq.ipynb  cluster_rmANOVA_time_freq.ipynb  decoding_csp_eeg.ipynb  decoding_spoc_CMC.ipynb  decoding_unsupervised_spatial_filter.ipynb  inverse_solution.ipynb  label_activation_from_stc.ipynb  linear_model_patterns.ipynb  mne_inverse_label_connectivity.ipynb  receptive_field.ipynb  single_dipole_fit.ipynb
