[tool.poetry]
name = "bci-classifier"
version = "0.1.0"
description = "BCI (Brain-Computer Interface) classification project using MNE Python"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "bci_classifier"}]

[tool.poetry.dependencies]
python = "^3.13"
mne = "^1.6.0"
numpy = "^1.26.0"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
scipy = "^1.11.0"
jupyter = "^1.0.0"
notebook = "^7.0.0"
click = "^8.1.0"
tqdm = "^4.66.0"
joblib = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[tool.poetry.scripts]
bci-classify = "bci_classifier.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 100
